fix: Nuevos cambios en about

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,14 +1,22 @@
 {{#> plantilla}}
-<div class="container">
+<link rel="stylesheet" href="/css/about.css">
+<div class="container-md">
     <h1>About.</h1>
-    <h2>¡Bienvenidos a nuestra comunidad de músicos, DJs y artistas!</h2>
-    <h4>Aquí encontrarás un espacio en línea donde podrás conectarte con otros profesionales de la industria de la música y compartir tus experiencias, proyectos y música.</h4>
-    <h5>En nuestra comunidad, valoramos la creatividad, la pasión y la dedicación que cada uno de nuestros miembros pone en su trabajo. Sabemos que la música no solo es una forma de arte, sino también una forma de comunicación y expresión, y estamos aquí para ayudarte a desarrollar y promover tu carrera musical.</h5>
-    <h5>Nuestro objetivo es crear una comunidad de apoyo donde puedas conocer a otros músicos y DJs, compartir tus experiencias y aprender unos de otros. Si eres un músico experimentado, un DJ con años de experiencia en la escena de la música electrónica, o simplemente un artista que está empezando, ¡nuestra comunidad es para ti!</h5>
-    <h5>Aquí podrás crear tu propio perfil de artista, subir tus últimas producciones, compartir tus mejores mezclas y conectarte con otros miembros para colaborar en proyectos. Además, ofrecemos recursos valiosos para ayudarte a mejorar tus habilidades musicales, desde tutoriales de producción musical hasta consejos para promocionar tu música en línea.</h5>
-    <h5>Y no solo eso, también organizamos eventos en línea y en vivo, como concursos de remixes, competencias de DJs y otros eventos de música electrónica que te permitirán mostrar tu talento en la escena musical.</h5>
-    <h5>En definitiva, nuestra comunidad es el lugar perfecto para que los músicos, DJs y artistas se conecten y se desarrollen en la industria de la música. Así que si eres un apasionado de la música, ¡únete a nosotros hoy mismo y descubre todo lo que nuestra comunidad tiene para ofrecer!</h5>
+    <div class="container-about">
+        <h2>¡Bienvenidos a nuestra comunidad de músicos, DJs y artistas!</h2>
+        <h4>Aquí encontrarás un espacio en línea donde podrás conectarte con otros profesionales de la industria de la música y compartir tus experiencias, proyectos y música.</h4>
+    </div>
+
+    <div class="container-info">
+        <h5>En nuestra comunidad, valoramos la creatividad, la pasión y la dedicación que cada uno de nuestros miembros pone en su trabajo. Sabemos que la música no solo es una forma de arte, sino también una forma de comunicación y expresión, y estamos aquí para ayudarte a desarrollar y promover tu carrera musical.</h5>
+        <h5>Nuestro objetivo es crear una comunidad de apoyo donde puedas conocer a otros músicos y DJs, compartir tus experiencias y aprender unos de otros. Si eres un músico experimentado, un DJ con años de experiencia en la escena de la música electrónica, o simplemente un artista que está empezando, ¡nuestra comunidad es para ti!</h5>
+        <h5>Aquí podrás crear tu propio perfil de artista, subir tus últimas producciones, compartir tus mejores mezclas y conectarte con otros miembros para colaborar en proyectos. Además, ofrecemos recursos valiosos para ayudarte a mejorar tus habilidades musicales, desde tutoriales de producción musical hasta consejos para promocionar tu música en línea.</h5>
+        <h5>Y no solo eso, también organizamos eventos en línea y en vivo, como concursos de remixes, competencias de DJs y otros eventos de música electrónica que te permitirán mostrar tu talento en la escena musical.</h5>
+        <h5>En definitiva, nuestra comunidad es el lugar perfecto para que los músicos, DJs y artistas se conecten y se desarrollen en la industria de la música. Así que si eres un apasionado de la música, ¡únete a nosotros hoy mismo y descubre todo lo que nuestra comunidad tiene para ofrecer!</h5>
+    </div>
+
 </div>
+
 
 
 {{/plantilla}}
