--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,7 +15,7 @@
         </p>
     </div>
     <div class="contenedor2">
-        <img class="imagen" src="/img/imglogin.jpg" alt="" width="55%">
+        <img class="imagen" src="/img/imglogin1.png" alt="" width="55%">
     </div>
 </main>
 
