--- a/public/css/about.css
+++ b/public/css/about.css
@@ -20,5 +20,6 @@
 
 .container-info {
   width: 80%;
-  padding: 20px;
+  padding: 30px;
+  text-align: justify;
 }/*# sourceMappingURL=about.css.map */
