add: imagen agregada en community.hbs

--- a/views/community.hbs
+++ b/views/community.hbs
@@ -27,7 +27,7 @@
                 <div class="splide__slide">
                     <div class="img_box">
                         <a href="http://localhost:3000/perfil/{{this.idUsuario}}">
-                            <img src="/img/prueba.jpg" alt="" width="150px" height="150px">
+                            <img src="{{imagen}}" alt="" width="150px" height="150px">
                         </a>
                         <div>
                             <p class="nickUsuario">{{this.nombreArtistaPerfil}}</p>
