--- a/views/genres.hbs
+++ b/views/genres.hbs
@@ -11,18 +11,20 @@
                 <div class="card">
                     <div>
                         <div>
-                            <img src="{{this.imagen}}" alt="">
+                            <img src="{{this.imagen}}" alt="" height="150px" style="border-radius: 6px;">
                         </div>
-                        <p>{{this.nombreArtistaPerfil}}</p>
-                        <p>Genero: {{this.nombreGenero_musical}}</p>
-                        <div class="likes">
-                            <img src="/img/icons/heart.svg" alt="">
-                            <div style="display:flex; margin-left:5px">
-                                <strong>{{this.topUsuario}}</strong>
-                                <p>likes</p>
+                        <div class="contenedor-info">
+                            <p>{{this.nombreArtistaPerfil}}</p>
+                            <p>Genero: {{this.nombreGenero_musical}}</p>
+                            <div class="likes">
+                                <img src="/img/icons/heart.svg" alt="">
+                                <div style="display:flex; margin-left:5px">
+                                    <strong>{{this.topUsuario}}</strong>
+                                    <p>likes</p>
+                                </div>
                             </div>
-                            
                         </div>
+                        
                     </div>
                     <a href="http://localhost:3000/perfil/{{this.idUsuario}}" class="btn btn-light"> ver </a>
                 </div>
