--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -32,7 +32,7 @@
                         {{#each imagen}}
                         <div class="splide__slide">
                             <div class="img_box">
-                                    <img src="{{this.imagen}}" alt="" width="100%">
+                                    <img src="{{this.imagen}}" alt="" width="100%" height="400px">
                             </div>
                         </div>
                         {{/each}}
