--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -18,9 +18,20 @@
         
         <p>{{usuarios.biografiaPerfil}}</p>
         <div class="likes">
-            <img src="/img/icons/heart.svg" alt="" width="20px">
+            <img src="/img/icons/heart.png" alt="" width="28px">
             <strong>{{usuarios.topUsuario}}</strong>
             <p>likes</p>
+        </div>
+
+        <div class="container-redes">
+            <a href="{{usuarios.instagramPerfilLink}}">
+                <img src="/img/icons/instagram.png" alt="" width="25px">
+                <p>Instagram</p>
+            </a>
+            <a href="{{usuarios.youtubePerfilLink}}">
+                <img src="/img/icons/youtube.png" alt="" width="36px">
+                <p>Youtube</p>
+            </a>
         </div>
     </div>
     
