--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -21,6 +21,7 @@ body {
   padding: 32px;
 }
 .container-profile .likes {
+  margin: 0 0 8px 2px;
   display: flex;
   width: 100px;
   gap: 2px;
@@ -28,6 +29,16 @@ body {
 .container-profile .likes p {
   padding: 0;
   margin: 0;
+}
+.container-profile .container-redes {
+  display: flex;
+}
+.container-profile .container-redes a {
+  margin: 0 0 0 4px;
+  display: flex;
+}
+.container-profile .container-redes a p {
+  margin: 0 0 0 4px;
 }
 
 .container-imagen {
