fix: cambios en estilos

--- a/views/genres.hbs
+++ b/views/genres.hbs
@@ -17,7 +17,7 @@
                             <p>{{this.nombreArtistaPerfil}}</p>
                             <p>Genero: {{this.nombreGenero_musical}}</p>
                             <div class="likes">
-                                <img src="/img/icons/heart.svg" alt="">
+                                <img src="/img/icons/heart.png" alt="">
                                 <div style="display:flex; margin-left:5px">
                                     <strong>{{this.topUsuario}}</strong>
                                     <p>likes</p>
