fix: Admin page

--- a/views/mantenedor/index.hbs
+++ b/views/mantenedor/index.hbs
@@ -1,4 +1,4 @@
-{{#> plantilla}}
+{{#> plantillaAdmin}}
 <link rel="stylesheet" href="/css/mantenedor/index.css">
 
 <div class="container-fluid">
@@ -139,4 +139,4 @@
 
 <script src="/js/mantenedor/index.js"></script>
 
-{{/plantilla}}
+{{/plantillaAdmin}}
