fix: env y variables

--- a/views/community.hbs
+++ b/views/community.hbs
@@ -27,7 +27,7 @@
                 <div class="splide__slide">
                     <div class="img_box">
                         <a href="http://localhost:3000/perfil/{{this.idUsuario}}">
-                            <img class="imgtop" src="{{imagen}}" alt="" width="200px" height="150px" style="border-radius: 6px;">
+                            <img class="imgtop" src="{{imagen2}}" alt="" width="200px" height="150px" style="border-radius: 6px;">
                         </a>
                         <div>
                             <p class="nickUsuario">{{this.nombreArtistaPerfil}}</p>
