--- a/views/genres.hbs
+++ b/views/genres.hbs
@@ -11,7 +11,7 @@
                 <div class="card">
                     <div>
                         <div>
-                            <img src="{{this.imagen}}" alt="" height="150px" style="border-radius: 6px;">
+                            <img src="{{this.imagen2}}" alt="" height="150px" style="border-radius: 6px;">
                         </div>
                         <div class="contenedor-info">
                             <p>{{this.nombreArtistaPerfil}}</p>
