--- a/views/partials/navbarAdmin.hbs
+++ b/views/partials/navbarAdmin.hbs
@@ -1,7 +1,7 @@
 <main>
     <nav>
         <div>
-            <a href="">
+            <a href="/">
                 <img src="/img/logo.svg" alt="">
             </a>
         </div>
