--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,8 +6,8 @@
     <div class="contenedor">
         <h3>Login</h3>
         <form action="/login" method="POST">
-            <input class="form-control" type="text" id="email" placeholder="email" name="username" value="ignacio99k@hotmail.com" required>
-            <input class="form-control" type="password" id="password" placeholder="password" name="password" value='123' required>
+            <input class="form-control" type="text" id="email" placeholder="email" name="username" value="juanperezmusic@gmail.com" required>
+            <input class="form-control" type="password" id="password" placeholder="password" name="password" value='password' required>
             <button type="submit" value="enviar">Login</button>
         </form>
         <p>No tienes una cuenta?
